src/wasm-lib/kcl/src/parser/snapshots/kcl_lib__parser__parser_impl__snapshot_tests__ac.snap
---
source: kcl/src/parser/parser_impl.rs
expression: actual
---
{
  "start": 0,
  "end": 23,
  "body": [
    {
      "type": "VariableDeclaration",
      "type": "VariableDeclaration",
      "start": 0,
      "end": 23,
      "declarations": [
        {
          "type": "VariableDeclarator",
          "start": 6,
          "end": 23,
          "id": {
            "type": "Identifier",
            "start": 6,
            "end": 13,
            "name": "myArray",
            "digest": null
          },
          "init": {
            "type": "ArrayExpression",
            "type": "ArrayExpression",
            "start": 16,
            "end": 23,
            "elements": [
              {
                "type": "Literal",
                "type": "Literal",
                "start": 17,
                "end": 18,
                "value": 0,
                "raw": "0",
                "digest": null
              },
              {
                "type": "Literal",
                "type": "Literal",
                "start": 17,
                "end": 18,
                "value": 1,
                "raw": "1",
                "digest": null
              },
              {
                "type": "Literal",
                "type": "Literal",
                "start": 17,
                "end": 18,
                "value": 2,
                "raw": "2",
                "digest": null
              },
              {
                "type": "Literal",
                "type": "Literal",
                "start": 17,
                "end": 18,
                "value": 3,
                "raw": "3",
                "digest": null
              },
              {
                "type": "Literal",
                "type": "Literal",
                "start": 17,
                "end": 18,
                "value": 4,
                "raw": "4",
                "digest": null
              },
              {
                "type": "Literal",
                "type": "Literal",
                "start": 17,
                "end": 18,
                "value": 5,
                "raw": "5",
                "digest": null
              },
              {
                "type": "Literal",
                "type": "Literal",
                "start": 17,
                "end": 18,
                "value": 6,
                "raw": "6",
                "digest": null
              },
              {
                "type": "Literal",
                "type": "Literal",
                "start": 17,
                "end": 18,
                "value": 7,
                "raw": "7",
                "digest": null
              },
              {
                "type": "Literal",
                "type": "Literal",
                "start": 17,
                "end": 18,
                "value": 8,
                "raw": "8",
                "digest": null
              },
              {
                "type": "Literal",
                "type": "Literal",
                "start": 17,
                "end": 18,
                "value": 9,
                "raw": "9",
                "digest": null
              },
              {
                "type": "Literal",
                "type": "Literal",
                "start": 17,
                "end": 18,
                "value": 10,
                "raw": "10",
                "digest": null
              }
            ],
            "digest": null
          },
          "digest": null
        }
      ],
      "visibility": "default",
      "kind": "const",
      "digest": null
    }
  ],
  "nonCodeMeta": {
    "nonCodeNodes": {},
    "start": [],
    "digest": null
  },
  "digest": null
}
