src/wasm-lib/kcl/src/parser/snapshots/kcl_lib__parser__parser_impl__snapshot_tests__ae.snap
---
source: kcl/src/parser/parser_impl.rs
expression: actual
---
{
  "start": 0,
  "end": 66,
  "body": [
    {
      "type": "VariableDeclaration",
      "type": "VariableDeclaration",
      "start": 0,
      "end": 49,
      "declarations": [
        {
          "type": "VariableDeclarator",
          "start": 3,
          "end": 49,
          "id": {
            "type": "Identifier",
            "start": 3,
            "end": 8,
            "name": "thing"
          },
          "init": {
            "type": "FunctionExpression",
            "start": 11,
            "end": 49,
            "params": [
              {
                "type": "Parameter",
                "identifier": {
                  "type": "Identifier",
                  "start": 12,
                  "end": 17,
                  "name": "param"
                },
                "optional": false
              }
            ],
            "body": {
              "start": 22,
              "end": 49,
              "body": [
                {
                  "type": "ReturnStatement",
                  "type": "ReturnStatement",
                  "start": 32,
                  "end": 43,
                  "argument": {
                    "type": "Literal",
                    "start": 39,
                    "end": 43,
                    "value": true,
                    "raw": "true"
                  }
                }
              ]
            }
          }
        }
      ],
      "kind": "fn"
    },
    {
      "type": "ExpressionStatement",
      "type": "ExpressionStatement",
      "start": 54,
      "end": 66,
      "expression": {
        "type": "CallExpression",
        "start": 54,
        "end": 66,
        "callee": {
          "type": "Identifier",
          "start": 54,
          "end": 59,
          "name": "thing"
        },
        "arguments": [
          {
            "type": "Literal",
            "start": 60,
            "end": 65,
            "value": false,
            "raw": "false"
          }
        ],
        "optional": false
      }
    }
  ]
}
