src/wasm-lib/kcl/src/parser/snapshots/kcl_lib__parser__parser_impl__snapshot_tests__ai.snap
---
source: kcl/src/parser/parser_impl.rs
expression: actual
---
{
  "start": 0,
  "end": 29,
  "body": [
    {
      "type": "VariableDeclaration",
      "type": "VariableDeclaration",
      "start": 0,
      "end": 29,
      "declarations": [
        {
          "type": "VariableDeclarator",
          "start": 6,
          "end": 29,
          "id": {
            "type": "Identifier",
            "start": 6,
            "end": 11,
            "name": "myBox"
          },
          "init": {
            "type": "PipeExpression",
            "start": 14,
            "end": 29,
            "body": [
              {
                "type": "CallExpression",
                "start": 14,
                "end": 18,
                "callee": {
                  "type": "Identifier",
                  "start": 14,
                  "end": 15,
                  "name": "f"
                },
                "arguments": [
                  {
                    "type": "Literal",
                    "start": 16,
                    "end": 17,
                    "value": 1,
                    "raw": "1"
                  }
                ],
                "optional": false
              },
              {
                "type": "CallExpression",
                "start": 22,
                "end": 29,
                "callee": {
                  "type": "Identifier",
                  "start": 22,
                  "end": 23,
                  "name": "g"
                },
                "arguments": [
                  {
                    "type": "Literal",
                    "start": 24,
                    "end": 25,
                    "value": 2,
                    "raw": "2"
                  },
                  {
                    "type": "PipeSubstitution",
                    "start": 27,
                    "end": 28
                  }
                ],
                "optional": false
              }
            ]
          }
        }
      ],
      "kind": "const"
    }
  ]
}
