src/wasm-lib/kcl/src/parser/snapshots/kcl_lib__parser__parser_impl__snapshot_tests__au.snap
---
source: kcl/src/parser/parser_impl.rs
expression: actual
---
{
  "start": 0,
  "end": 108,
  "body": [
    {
      "type": "VariableDeclaration",
      "type": "VariableDeclaration",
      "start": 0,
      "end": 107,
      "declarations": [
        {
          "type": "VariableDeclarator",
          "start": 6,
          "end": 107,
          "id": {
            "type": "Identifier",
            "start": 6,
            "end": 14,
            "name": "cylinder",
            "digest": null
          },
          "init": {
            "type": "PipeExpression",
            "type": "PipeExpression",
            "start": 17,
            "end": 107,
            "body": [
              {
                "type": "CallExpression",
                "type": "CallExpression",
                "start": 17,
                "end": 36,
                "callee": {
                  "type": "Identifier",
                  "start": 17,
                  "end": 30,
                  "name": "startSketchOn",
                  "digest": null
                },
                "arguments": [
                  {
                    "type": "Literal",
                    "type": "Literal",
                    "start": 31,
                    "end": 35,
                    "value": "XY",
                    "raw": "'XY'",
                    "digest": null
                  }
                ],
                "optional": false,
                "digest": null
              },
              {
                "type": "CallExpression",
                "type": "CallExpression",
                "start": 44,
                "end": 85,
                "callee": {
                  "type": "Identifier",
                  "start": 44,
                  "end": 50,
                  "name": "circle",
                  "digest": null
                },
                "arguments": [
                  {
                    "type": "ObjectExpression",
                    "type": "ObjectExpression",
                    "start": 51,
                    "end": 81,
                    "properties": [
                      {
                        "type": "ObjectProperty",
                        "start": 53,
                        "end": 67,
                        "key": {
                          "type": "Identifier",
                          "start": 53,
                          "end": 59,
                          "name": "center",
                          "digest": null
                        },
                        "value": {
                          "type": "ArrayExpression",
                          "type": "ArrayExpression",
                          "start": 61,
                          "end": 67,
                          "elements": [
                            {
                              "type": "Literal",
                              "type": "Literal",
                              "start": 62,
                              "end": 63,
                              "value": 0,
                              "raw": "0",
                              "digest": null
                            },
                            {
                              "type": "Literal",
                              "type": "Literal",
                              "start": 65,
                              "end": 66,
                              "value": 0,
                              "raw": "0",
                              "digest": null
                            }
                          ],
                          "digest": null
                        },
                        "digest": null
                      },
                      {
                        "type": "ObjectProperty",
                        "start": 69,
                        "end": 79,
                        "key": {
                          "type": "Identifier",
                          "start": 69,
                          "end": 75,
                          "name": "radius",
                          "digest": null
                        },
                        "value": {
                          "type": "Literal",
                          "type": "Literal",
                          "start": 77,
                          "end": 79,
                          "value": 22,
                          "raw": "22",
                          "digest": null
                        },
                        "digest": null
                      }
                    ],
                    "digest": null
                  },
                  {
                    "type": "PipeSubstitution",
                    "type": "PipeSubstitution",
                    "start": 83,
                    "end": 84,
                    "digest": null
                  }
                ],
                "optional": false,
                "digest": null
              },
              {
                "type": "CallExpression",
                "type": "CallExpression",
                "start": 93,
                "end": 107,
                "callee": {
                  "type": "Identifier",
                  "start": 93,
                  "end": 100,
                  "name": "extrude",
                  "digest": null
                },
                "arguments": [
                  {
                    "type": "Literal",
                    "type": "Literal",
                    "start": 101,
                    "end": 103,
                    "value": 14,
                    "raw": "14",
                    "digest": null
                  },
                  {
                    "type": "PipeSubstitution",
                    "type": "PipeSubstitution",
                    "start": 105,
                    "end": 106,
                    "digest": null
                  }
                ],
                "optional": false,
                "digest": null
              }
            ],
            "nonCodeMeta": {
              "nonCodeNodes": {},
              "start": [],
              "digest": null
            },
            "digest": null
          },
          "digest": null
        }
      ],
      "kind": "const",
      "digest": null
    }
  ],
  "nonCodeMeta": {
    "nonCodeNodes": {},
    "start": [],
    "digest": null
  },
  "digest": null
}
