src/wasm-lib/kcl/src/parser/snapshots/kcl_lib__parser__parser_impl__snapshot_tests__bc.snap
---
source: kcl/src/parser/parser_impl.rs
expression: actual
---
{
  "start": 0,
  "end": 74,
  "body": [
    {
      "type": "VariableDeclaration",
      "type": "VariableDeclaration",
      "start": 0,
      "end": 74,
      "declarations": [
        {
          "type": "VariableDeclarator",
          "start": 6,
          "end": 74,
          "id": {
            "type": "Identifier",
            "start": 6,
            "end": 7,
            "name": "x"
          },
          "init": {
            "type": "IfExpression",
            "start": 10,
            "end": 74,
            "cond": {
              "type": "Literal",
              "start": 13,
              "end": 17,
              "value": true,
              "raw": "true"
            },
            "then_val": {
              "start": 32,
              "end": 42,
              "body": [
                {
                  "type": "ExpressionStatement",
                  "type": "ExpressionStatement",
                  "start": 32,
                  "end": 33,
                  "expression": {
                    "type": "Literal",
                    "start": 32,
                    "end": 33,
                    "value": 3,
                    "raw": "3"
                  }
                }
              ]
            },
            "else_ifs": [],
            "final_else": {
              "start": 63,
              "end": 73,
              "body": [
                {
                  "type": "ExpressionStatement",
                  "type": "ExpressionStatement",
                  "start": 63,
                  "end": 64,
                  "expression": {
                    "type": "Literal",
                    "start": 63,
                    "end": 64,
                    "value": 4,
                    "raw": "4"
                  }
                }
              ]
            },
            "digest": null
          }
        }
      ],
      "kind": "const"
    }
  ]
}
