src/wasm-lib/kcl/src/parser/snapshots/kcl_lib__parser__parser_impl__snapshot_tests__c.snap
---
source: kcl/src/parser/parser_impl.rs
expression: actual
---
{
  "start": 0,
  "end": 35,
  "body": [
    {
      "type": "VariableDeclaration",
      "type": "VariableDeclaration",
      "start": 0,
      "end": 35,
      "declarations": [
        {
          "type": "VariableDeclarator",
          "start": 6,
          "end": 35,
          "id": {
            "type": "Identifier",
            "start": 6,
            "end": 11,
            "name": "myVar"
          },
          "init": {
            "type": "CallExpression",
            "start": 14,
            "end": 35,
            "callee": {
              "type": "Identifier",
              "start": 14,
              "end": 17,
              "name": "min"
            },
            "arguments": [
              {
                "type": "UnaryExpression",
                "start": 18,
                "end": 31,
                "operator": "-",
                "argument": {
                  "type": "CallExpression",
                  "start": 19,
                  "end": 31,
                  "callee": {
                    "type": "Identifier",
                    "start": 19,
                    "end": 25,
                    "name": "legLen"
                  },
                  "arguments": [
                    {
                      "type": "Literal",
                      "start": 26,
                      "end": 27,
                      "value": 5,
                      "raw": "5"
                    },
                    {
                      "type": "Literal",
                      "start": 29,
                      "end": 30,
                      "value": 4,
                      "raw": "4"
                    }
                  ],
                  "optional": false
                }
              },
              {
                "type": "Literal",
                "start": 33,
                "end": 34,
                "value": 5,
                "raw": "5"
              }
            ],
            "optional": false
          }
        }
      ],
      "kind": "const"
    }
  ]
}
